--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+<html>
+  <title>
+  Profile Assignment
+  </title>
+  
+  <body>
+    <h1> Personal Info </h1>
+  </body>
+  
+  <style>
+    body {
+      background-color:green;
+      text-align:center;
+    }
+  </style>
+  
+</html>
