--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
   <title>
   Profile Assignment
   </title>
+  <header>
+    <div>
+       <div class="Personal Info button"
+            bottom:
+     <div>
+      <div>
+       <div class="Interest in IT button"
+            text-align:center;
+     <div>
+        <div>
+       <div class="Ideal Job button"
+            text-align:center;
+     <div>
+               <div>
+       <div class=Project Ideas button"
+            text-align:center;
+     <div>
+  </header>
+  
+  
   
   <body>
     <h1> Personal Info </h1>
