--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
   <header>
     <div>
        <div class="Personal Info button"
-            bottom:
-     <div>
+            background-color:white;
+            text-align:center;
+     </div>
       <div>
        <div class="Interest in IT button"
             text-align:center;
-     <div>
+     </div>
         <div>
        <div class="Ideal Job button"
+            background-color:white;
             text-align:center;
-     <div>
+     </div>
                <div>
        <div class=Project Ideas button"
+            background-color:white;
             text-align:center;
-     <div>
+     </div>
   </header>
   
   
@@ -30,7 +33,7 @@
   
   <style>
     body {
-      background-color:green;
+      background-color:blue;
       text-align:center;
     }
   </style>
